--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
 <head>
   <meta charset=utf-8>
   <title>Challenge-Roro</title>
+  <link rel="stylesheet" href="/css/normalize.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/jquery/dist/jquery.min.js">
   <link rel="stylesheet" href="css/style.css">
 </head>
+<body>
 
+
+<div class="player">
+<div class="left-button">
+  <input type="button" name="play_pause" value="">
+  <input type="button" name="before" value="">
+  <input type="button" name="next" value="">
+</div>
+<div class="time">
+  <p> OO:OO</p>
+</div>
+<div class="player-bar">
+  
+</div>
+</div>
 
 
 
