--- a/index.html
+++ b/index.html
@@ -12,18 +12,23 @@
 <body>
 
 
-<div class="player">
-<div class="left-button">
-  <input type="button" name="play_pause" value="">
-  <input type="button" name="before" value="">
-  <input type="button" name="next" value="">
+<div id="player">
+<div id="left-button">
+  <input type="button" id="play_pause">
+  <input type="button" id= "before">
+  <input type="button" id="next">
 </div>
-<div class="time">
+<div id="time">
   <p> OO:OO</p>
 </div>
-<div class="player-bar">
-  
+<div id="player-bar">
+
 </div>
+<div id="timeLess">
+  <p> O3:OO</p>
+</div>
+<input type="button"id="sound">
+
 </div>
 
 
