--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <div class="player">
 <div class="left-button">
-  <input type="button" name="play_pause" value="">
-  <input type="button" name="before" value="">
-  <input type="button" name="next" value="">
+  <button type="button" id="play_pause" value=""><i class="fa fa-play"></i></button>
+  <button type="button" id="next" value=""><i class="fa fa-step-backward"></i></button>
+  <button type="button" id="before" value=""><i class="fa fa-step-forward"></i></button>
 </div>
 <div class="time">
   <p> OO:OO</p>
