--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id="player-bar">
 
 </div>
-<div id="timeLess">
+<div id="timeLeft">
   <p> O3:OO</p>
 </div>
 <input type="button"id="sound">
