--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 <body>
 
 
+
+	<!-- BARRE 1 -->
+
+
+
 <div id="player">
 <div id="left-button">
-  <input type="button" id="play_pause">
-  <input type="button" id= "before">
-  <input type="button" id="next">
+  <button class='btn-p1' type="button" id="play_pause"><i class="fa fa-play"></i></button>
+  <button class='btn-p1'type="button" id= "before"><i class="fa fa-step-backward"></i></button>
+  <button class='btn-p1'type="button" id="next"><i class="fa fa-step-forward"></i></button>
 </div>
 <div id="time">
   <p> OO:OO</p>
@@ -27,9 +32,38 @@
 <div id="timeLeft">
   <p> O3:OO</p>
 </div>
-<input type="button"id="sound">
+<button class='btn-p1' type="button"id="sound"></button>
 
 </div>
+
+
+
+	<!-- BARRE 2 -->
+
+
+
+
+<div id="player2">
+	<div id="player-top">
+			<img id="jaquette" src="#">
+		<button class='btn-p1'type="button" id= "before"><i class="fa fa-step-backward"></i></button>
+		<button class='btn-p1' type="button" id="play_pause"><i class="fa fa-play"></i></button>
+		<button class='btn-p1'type="button" id="next"><i class="fa fa-step-forward"></i></button>
+		<button class='btn-p1' type="button"id="sound"><i class="fa fa-volume-off"></i></button>
+	</div>
+	<div id="player-bot">
+		<div id="time">
+   	    	<p> OO:OO</p>
+        </div>
+		<div id="player-bar2">
+		</div>
+		<div id="timeLeft">
+  			<p> O3:OO</p>
+		</div>
+	</div>
+</div>
+
+
 
 
 
