--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <div id="player">
 <div id="left-button">
-  <button class='btn-p1' type="button" id="play_pause"><i class="fa fa-play"></i></button>
-  <button class='btn-p1'type="button" id= "before"><i class="fa fa-step-backward"></i></button>
-  <button class='btn-p1'type="button" id="next"><i class="fa fa-step-forward"></i></button>
+  <button class='btn' type="button" id="play_pause"><i class="fa fa-play"></i></button>
+  <button class='btn'type="button" id= "before"><i class="fa fa-step-backward"></i></button>
+  <button class='btn'type="button" id="next"><i class="fa fa-step-forward"></i></button>
 </div>
 <div id="time">
   <p> OO:OO</p>
@@ -32,7 +32,7 @@
 <div id="timeLeft">
   <p> O3:OO</p>
 </div>
-<button class='btn-p1' type="button"id="sound"></button>
+<button class='btn' type="button"id="sound"></button>
 
 </div>
 
@@ -46,10 +46,10 @@
 <div id="player2">
 	<div id="player-top">
 			<img id="jaquette" src="#">
-		<button class='btn-p1'type="button" id= "before"><i class="fa fa-step-backward"></i></button>
-		<button class='btn-p1' type="button" id="play_pause"><i class="fa fa-play"></i></button>
-		<button class='btn-p1'type="button" id="next"><i class="fa fa-step-forward"></i></button>
-		<button class='btn-p1' type="button"id="sound"><i class="fa fa-volume-off"></i></button>
+		<button class='btn'type="button" id= "before"><i class="fa fa-step-backward"></i></button>
+		<button class='btn' type="button" id="play_pause"><i class="fa fa-play"></i></button>
+		<button class='btn'type="button" id="next"><i class="fa fa-step-forward"></i></button>
+		<button class='btn' type="button"id="sound"><i class="fa fa-volume-off"></i></button>
 	</div>
 	<div id="player-bot">
 		<div id="time">
