--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset=utf-8>
   <title>Challenge-Roro</title>
   <link rel="stylesheet" href="/css/normalize.css" media="screen" title="no title" charset="utf-8">
