--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 
 <div id="player">
 <div id="left-button">
-  <button class='btn' type="button" id="play_pause"><i class="fa fa-play"></i></button>
   <button class='btn'type="button" id= "before"><i class="fa fa-step-backward"></i></button>
+  <button class='btn' type="button" id="play_pause"><i class="fa fa-play"></i></button>
   <button class='btn'type="button" id="next"><i class="fa fa-step-forward"></i></button>
+  <button class='btn' type="button"id="sound"><i class="fa fa-volume-up"></i></button>
 </div>
+<div id="queryBot">
+
 <div id="time">
   <p> OO:OO</p>
 </div>
@@ -32,35 +35,8 @@
 <div id="timeLeft">
   <p> O3:OO</p>
 </div>
-<button class='btn' type="button"id="sound"></button>
-
 </div>
 
-
-
-	<!-- BARRE 2 -->
-
-
-
-
-<div id="player2">
-	<div id="player-top">
-			<img id="jaquette" src="#">
-		<button class='btn'type="button" id= "before"><i class="fa fa-step-backward"></i></button>
-		<button class='btn' type="button" id="play_pause"><i class="fa fa-play"></i></button>
-		<button class='btn'type="button" id="next"><i class="fa fa-step-forward"></i></button>
-		<button class='btn' type="button"id="sound"><i class="fa fa-volume-off"></i></button>
-	</div>
-	<div id="player-bot">
-		<div id="time">
-   	    	<p> OO:OO</p>
-        </div>
-		<div id="player-bar2">
-		</div>
-		<div id="timeLeft">
-  			<p> O3:OO</p>
-		</div>
-	</div>
 </div>
 
 
