Probleme ID Progress

--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
 <div id="time">
   <p> OO:OO</p>
 </div>
-<div id="player-bar">
+
+
+<div id="progress" id="player bar">
+
+    <progress value="1" min="0" max="100"><span></span></progress>
 
 </div>
+
+
 <div id="timeLeft">
   <p> O3:OO</p>
 </div>
