--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
 </div>
 
 
-<div id="progress" id="player bar">
+    <progress id="progress" value="1" min="0" max="100"><span></span></progress>
 
-    <progress value="1" min="0" max="100"><span></span></progress>
 
-</div>
 
 
 <div id="timeLeft">
