--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 
 
-<div id="progress" id="player bar">
+<div id="progress">
 
     <progress value="1" min="0" max="100"><span></span></progress>
 
@@ -48,8 +48,11 @@
 
 
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
+</script>
 <script src="javascript/script.js"
  ></script>
+ <script src="javascript/main.js"
+  ></script>
 </body>
 </html>
