--- a/index.html
+++ b/index.html
@@ -15,19 +15,14 @@
 
 	<!-- BARRE 1 -->
 
-
-
 <div id="player">
-<div id="left-button">
-  <button class='btn'type="button" id= "before"><i class="fa fa-step-backward"></i></button>
-  <button class='btn' type="button" id="play_pause"><i class="fa fa-play"></i></button>
-  <button class='btn'type="button" id="next"><i class="fa fa-step-forward"></i></button>
-  <button class='btn' type="button"id="sound"><i class="fa fa-volume-up"></i></button>
-</div>
-<div id="queryBot">
-
-<div id="time">
-  <p> OO:OO</p>
+    <div id = "top">
+    <img id="image1"src=images/thylacine_4_by_romainriviere.jpg>
+  <!--   <img id="image2"src="images/01428adf0b.jpg"> -->
+    </div>
+    <div id="middle">
+      <div id="time">
+      <p> OO:OO</p>
 </div>
 
 
@@ -42,6 +37,16 @@
 </div>
 </div>
 
+<div id = "down">
+    <div id="left-button">
+      <button class='btn'type="button" id= "before"><i class="fa fa-step-backward"></i></button>
+      <button class='btn' type="button" id="play_pause"><i class="fa fa-play"></i></button>
+      <button class='btn'type="button" id="next"><i class="fa fa-step-forward"></i></button>
+      <button class='btn' type="button"id="sound"><i class="fa fa-volume-up"></i></button>
+    </div>
+    <div id="queryBot">
+    </div>
+  </div>
 </div>
 
 
