--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
 
 <div id="player">
     <div id = "top">
-    <img id="image1"src=images/thylacine_4_by_romainriviere.jpg>
+    <img id="image1"src=images/../images/rhfactor.jpg>
   <!--   <img id="image2"src="images/01428adf0b.jpg"> -->
     </div>
     <div id="middle">
-      <div id="time">
-      <p> OO:OO</p>
-</div>
+      <div id="time">00:00:00</div>
 
 
 <div id="progress">
@@ -31,31 +29,22 @@
 </div>
 
 
+<button type="button"id="sound"><i class="fa fa-volume-up"></i></button>
 
-<div id="timeLeft">
-  <p> O3:OO</p>
-</div>
+<div id="timeLeft">-00:00:00</div>
 </div>
 
 <div id = "down">
-    <div id="left-button">
       <button class='btn'type="button" id= "before"><i class="fa fa-step-backward"></i></button>
       <button class='btn' type="button" id="play_pause"><i class="fa fa-play"></i></button>
       <button class='btn'type="button" id="next"><i class="fa fa-step-forward"></i></button>
-      <button class='btn' type="button"id="sound"><i class="fa fa-volume-up"></i></button>
-    </div>
-    <div id="queryBot">
-    </div>
   </div>
 </div>
 
 
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
-</script>
-<script src="javascript/script.js"
- ></script>
+
  <script src="javascript/main.js"
   ></script>
 </body>
