Added cover support and some cleaning on the CSS, HTML and the naming of images.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="player">
       <div id = "top">
-        <img id="image1" src="images/../images/rhfactor.jpg">
+        <img id="image1">
       </div>
       <div id="middle">
         <div id="time">00:00:00</div>
