--- a/index.html
+++ b/index.html
@@ -1,51 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset=utf-8>
-  <title>Challenge-Roro</title>
-  <link rel="stylesheet" href="/css/normalize.css" media="screen" title="no title" charset="utf-8">
-  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="bower_components/jquery/dist/jquery.min.js">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+  <head>
+    <meta charset=utf-8>
+    <title>Challenge-Roro</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
 
 
 
-	<!-- BARRE 1 -->
+    <!-- BARRE 1 -->
 
-<div id="player">
-    <div id = "top">
-    <img id="image1"src=images/../images/rhfactor.jpg>
-  <!--   <img id="image2"src="images/01428adf0b.jpg"> -->
+    <div id="player">
+      <div id = "top">
+        <img id="image1">
+      </div>
+      <div id="middle">
+        <div id="time">00:00:00</div>
+
+
+        <div id="progress">
+          <progress id="progress" value="0" min="0" max="100"><span></span></progress>
+        </div>
+
+
+        <button type="button" id="sound"><i class="fa fa-volume-up"></i></button>
+
+        <div id="timeLeft">-00:00:00</div>
+      </div>
+
+      <div id="down">
+        <button class='btn' type="button" id="before"><i class="fa fa-step-backward"></i></button>
+        <button class='btn' type="button" id="play_pause"><i class="fa fa-play"></i></button>
+        <button class='btn' type="button" id="next"><i class="fa fa-step-forward"></i></button>
+      </div>
     </div>
-    <div id="middle">
-      <div id="time">00:00:00</div>
-
-
-<div id="progress">
-    <progress id="progress" value="1" min="0" max="100"><span></span></progress>
-</div>
-
-
-<button type="button"id="sound"><i class="fa fa-volume-up"></i></button>
-
-<div id="timeLeft">-00:00:00</div>
-</div>
-
-<div id = "down">
-      <button class='btn'type="button" id= "before"><i class="fa fa-step-backward"></i></button>
-      <button class='btn' type="button" id="play_pause"><i class="fa fa-play"></i></button>
-      <button class='btn'type="button" id="next"><i class="fa fa-step-forward"></i></button>
-  </div>
-</div>
 
 
 
 
 
- <script src="javascript/main.js"
-  ></script>
-</body>
+    <script src="javascript/main.js"></script>
+  </body>
 </html>
