--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <div id="player">
       <div id = "top">
         <img id="image1">
+        <div class="box-title">
+                  <p id="title">
+
+        </p>
+      </div>
+
       </div>
       <div id="middle">
         <div id="time">00:00:00</div>
