--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img id="image1">
         <div class="box-title">
                   <p id="title">
-
+Common Free Style,RH-factor
         </p>
       </div>
 
